--- a/index.html
+++ b/index.html
@@ -157,6 +157,8 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/tab/sidebar--595412856</li>
+
 <li>$:/status/RequireReloadDueToPluginChange</li>
 
 <li>$:/StoryList</li>
@@ -171,11 +173,11 @@ Error message and password prompt
 
 <li>custom tag</li>
 
-<li>Draft of 'New Tiddler'</li>
-
 <li>HelloThere</li>
 
 <li>Known issues</li>
+
+<li>Loading a saved mood</li>
 
 </ul>
 </p>
@@ -10246,10 +10248,13 @@ Error message and password prompt
 <div bag="default" created="20210308210711064" modified="20210310171532575" revision="0" title="$:/SiteTitle" type="text/vnd.tiddlywiki">
 <pre>Moods plugin</pre>
 </div>
+<div created="20210311142055856" modified="20210311142055856" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Recent</pre>
+</div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210311133200140" list="HelloThere [[Change colours in Omelette palette]] [[Style sampler]]" modified="20210311133239098" title="$:/StoryList">
+<div created="20210311133200140" list="HelloThere [[Change colours in Omelette palette]] [[Style sampler]]" modified="20210311142057194" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20210308175746070" modified="20210308213156481" revision="0" title="$:/theme" type="text/vnd.tiddlywiki">
@@ -10378,7 +10383,17 @@ text wikcolour: &lt;$text text=&lt;&lt;wikcolour&gt;&gt; /&gt; &lt;br&gt;
 <div bag="default" color="#6a27ad" created="20210310172937776" modified="20210310172939537" revision="0" title="custom tag" type="text/vnd.tiddlywiki">
 <pre></pre>
 </div>
-<div bag="default" created="20210311000920936" draft.of="New Tiddler" draft.title="Loading a saved mood" modified="20210311002857343" revision="0" tags="" title="Draft of 'New Tiddler'" type="text/vnd.tiddlywiki">
+<div bag="default" created="20210311000455267" modified="20210311000504537" revision="0" tags="" title="HelloThere" type="text/vnd.tiddlywiki">
+<pre>''Here is a tool to mix and match colours in the &quot;Omelette&quot; palette.'' (You have to break a few eggs to make an omelette)
+</pre>
+</div>
+<div bag="default" created="20210310171004240" modified="20210310192110528" revision="0" tags="[[custom tag]]" title="Known issues" type="text/vnd.tiddlywiki">
+<pre>* tag pill colours not dealt with - tag picker dropdown can have invisible text even if normal default tag looks good
+* style groupings need improvement
+* palette colour changer needs more visual cues
+* doesn't include normal buttons</pre>
+</div>
+<div bag="default" created="20210311000920936" modified="20210311142104654" revision="0" tags="" title="Loading a saved mood" type="text/vnd.tiddlywiki">
 <pre>\define moodtiddler() $:/plugins/can/moods/moods/$(moodname)$
 
 \define loadMood(moodname) 
@@ -10391,20 +10406,10 @@ text wikcolour: &lt;$text text=&lt;&lt;wikcolour&gt;&gt; /&gt; &lt;br&gt;
 &lt;/$vars&gt;
 \end
 
-
+WIP
 &lt;&lt;loadMood night_lights&gt;&gt;
 
 * need to add a field to saved moods to make sure they are compatible with the current palette</pre>
-</div>
-<div bag="default" created="20210311000455267" modified="20210311000504537" revision="0" tags="" title="HelloThere" type="text/vnd.tiddlywiki">
-<pre>''Here is a tool to mix and match colours in the &quot;Omelette&quot; palette.'' (You have to break a few eggs to make an omelette)
-</pre>
-</div>
-<div bag="default" created="20210310171004240" modified="20210310192110528" revision="0" tags="[[custom tag]]" title="Known issues" type="text/vnd.tiddlywiki">
-<pre>* tag pill colours not dealt with - tag picker dropdown can have invisible text even if normal default tag looks good
-* style groupings need improvement
-* palette colour changer needs more visual cues
-* doesn't include normal buttons</pre>
 </div>
 
 
