--- a/index.html
+++ b/index.html
@@ -10248,13 +10248,13 @@ Error message and password prompt
 <div bag="default" created="20210308210711064" modified="20210310171532575" revision="0" title="$:/SiteTitle" type="text/vnd.tiddlywiki">
 <pre>Moods plugin</pre>
 </div>
-<div created="20210311142055856" modified="20210311142055856" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Recent</pre>
+<div created="20210311142055856" modified="20210311142253417" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Open</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210311133200140" list="HelloThere [[Change colours in Omelette palette]] [[Style sampler]]" modified="20210311142057194" title="$:/StoryList">
+<div created="20210311133200140" list="HelloThere [[Change colours in Omelette palette]] [[Style sampler]]" modified="20210311142241229" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20210308175746070" modified="20210308213156481" revision="0" title="$:/theme" type="text/vnd.tiddlywiki">
